# graylog_api_client

./: .gitignore  LICENSE  README.md  endpoints.md  pyproject.toml
src/graylog_api_client/: __init__.py  data_structures.py  exceptions.py  graylog_api_client.py  rest_adapter.py
tests/: test_graylog_api_client.py  test_rest_adapter.py
