[project]
name = "graylog-api-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Chrxxxxs",email = "134285960+Chrxxxxs@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
]

[tool.poetry]
packages = [{include = "graylog_api_client", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
